@@ -43,6 +43,7 @@ if $CXX $CPPFLAGS $CXXFLAGS $CXX_pic_flag -c foo.cpp; then :; else
   CXX_pic_flag=
 fi
 
+AT_CHECK([test "$at_srcdir" != . || exit 77])
 LT_AT_CONFIGURE([lt_cv_prog_compiler_pic="$C_pic_flag" ]dnl
 		[lt_cv_prog_compiler_pic_CXX="$CXX_pic_flag"],
 		["$abs_top_srcdir"/configure])
